--- a/Colors/Base.lproj/Main_iPhone.storyboard
+++ b/Colors/Base.lproj/Main_iPhone.storyboard
@@ -52,15 +52,21 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZmQ-zW-der" userLabel="Time Elapsed Slider" customClass="MTZSlider">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZmQ-zW-der" userLabel="Time Elapsed Slider" customClass="MTZSlider">
                                 <rect key="frame" x="52" y="388" width="216" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
                                 <connections>
                                     <action selector="trackSliderChangedValue:" destination="vXZ-lx-hvc" eventType="valueChanged" id="bHS-yp-cvb"/>
+                                    <action selector="trackSliderDidBegin:" destination="vXZ-lx-hvc" eventType="touchDown" id="aAg-2b-8Bj"/>
+                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="touchCancel" id="AqQ-fL-kr1"/>
+                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="touchUpOutside" id="Jf4-pm-FJW"/>
+                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="editingDidEndOnExit" id="sjt-UX-MEN"/>
+                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="upp-6I-GsX"/>
                                 </connections>
                             </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="crC-2W-J97" userLabel="Volume Slider" customClass="MTZSlider">
+                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="crC-2W-J97" userLabel="Volume Slider" customClass="MTZSlider">
                                 <rect key="frame" x="52" y="502" width="216" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <connections>
