--- a/Colors/Base.lproj/Main_iPhone.storyboard
+++ b/Colors/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A584" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="13A598" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <deployment defaultVersion="1536" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -52,27 +52,6 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ZmQ-zW-der" userLabel="Time Elapsed Slider" customClass="MTZSlider">
-                                <rect key="frame" x="52" y="388" width="216" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                <gestureRecognizers/>
-                                <connections>
-                                    <action selector="trackSliderChangedValue:" destination="vXZ-lx-hvc" eventType="valueChanged" id="bHS-yp-cvb"/>
-                                    <action selector="trackSliderDidBegin:" destination="vXZ-lx-hvc" eventType="touchDown" id="aAg-2b-8Bj"/>
-                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="touchCancel" id="AqQ-fL-kr1"/>
-                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="touchUpOutside" id="Jf4-pm-FJW"/>
-                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="editingDidEndOnExit" id="sjt-UX-MEN"/>
-                                    <action selector="trackSliderDidEnd:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="upp-6I-GsX"/>
-                                </connections>
-                            </slider>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="crC-2W-J97" userLabel="Volume Slider" customClass="MTZSlider">
-                                <rect key="frame" x="52" y="502" width="216" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="volumeChanged:" destination="vXZ-lx-hvc" eventType="valueChanged" id="NB7-Je-v5a"/>
-                                </connections>
-                            </slider>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="roundedRect" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TIq-Mk-fRL" userLabel="Repeat">
                                 <rect key="frame" x="10" y="538" width="64" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -178,12 +157,11 @@
                         <outlet property="iv" destination="bVt-5P-T9h" id="d4h-el-BDZ"/>
                         <outlet property="navigationBar" destination="RDY-c5-mrg" id="Xdy-Lg-lcV"/>
                         <outlet property="playPause" destination="kFf-ez-yqJ" id="LJh-AZ-gTA"/>
+                        <outlet property="speakerOffImage" destination="H43-4O-GLe" id="BUJ-sN-18o"/>
                         <outlet property="timeElapsed" destination="Rqd-8a-tLV" id="4hy-OQ-uZQ"/>
                         <outlet property="timeRemaining" destination="Y6v-2K-9E3" id="bpd-X9-xmm"/>
                         <outlet property="topShadow" destination="VQo-70-tfi" id="U5a-Ax-jkR"/>
-                        <outlet property="trackSlider" destination="ZmQ-zW-der" id="7L1-0d-zE8"/>
                         <outlet property="trackTitle" destination="nQM-BZ-11x" id="11C-2N-qUK"/>
-                        <outlet property="volumeSlider" destination="crC-2W-J97" id="9Sf-go-JbN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
